# zorvyn-backend-task

./: README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: a0484d647689_init.py  c659c3a3b2eb_init.py
app/core/: config.py  redis.py  security.py
app/database/: session.py
app/middleware/: csrf_middleware.py  rate_limit_middleware.py
app/models/: __init__.py  auth.py  records.py  utils.py
app/modules/auth/: permission.py  repository.py  router.py  schemas.py  service.py
app/modules/auth/tests/: test_auth_integrate.py  test_auth_units.py
app/modules/dashboard/: repository.py  router.py  schemas.py  service.py
app/modules/dashboard/tests/: test_dashboard_integrate.py  test_dashboard_units.py
app/modules/records/: repository.py  router.py  schemas.py  service.py
app/modules/records/tests/: test_records_integrate.py  test_records_units.py
app/utils/: enums.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: index.css  main.jsx
frontend/src/app/: app.jsx  provider.jsx  router.jsx
frontend/src/components/: Button.jsx  Checkboxtoggle.jsx  Input.jsx  Label.jsx  ProtectedRoute.jsx  Textarea.jsx
frontend/src/config/: api-client.js  api.js  csrf.js
frontend/src/features/auth/api/: login.js  me.js
frontend/src/features/auth/components/: LoginCard.jsx
frontend/src/features/auth/hooks/: useAuth.js
frontend/src/features/desktop/: AppShell.jsx
frontend/src/lib/: format.js  toast.js  utils.js
frontend/src/stores/: authSlice.js  store.js
(+19 files in other folders)
